--- a/generic-attributes.cabal
+++ b/generic-attributes.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      SqlGenerator
       TypeInfo
   other-modules:
       Paths_generic_attributes
@@ -34,6 +35,7 @@ library
   build-depends:
       base >=4.7 && <5
     , ghc
+    , syb
   default-language: Haskell2010
 
 executable generic-attributes-exe
@@ -47,6 +49,7 @@ executable generic-attributes-exe
       base >=4.7 && <5
     , generic-attributes
     , ghc
+    , syb
   default-language: Haskell2010
 
 test-suite generic-attributes-test
@@ -61,4 +64,5 @@ test-suite generic-attributes-test
       base >=4.7 && <5
     , generic-attributes
     , ghc
+    , syb
   default-language: Haskell2010
