--- a/generic-attributes.cabal
+++ b/generic-attributes.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -36,6 +36,7 @@ library
   build-depends:
       base >=4.7 && <5
     , ghc
+    , ghc-prim
     , syb
     , transformers
   default-language: Haskell2010
@@ -51,6 +52,7 @@ executable generic-attributes-exe
       base >=4.7 && <5
     , generic-attributes
     , ghc
+    , ghc-prim
     , syb
     , transformers
   default-language: Haskell2010
@@ -67,6 +69,7 @@ test-suite generic-attributes-test
       base >=4.7 && <5
     , generic-attributes
     , ghc
+    , ghc-prim
     , syb
     , transformers
   default-language: Haskell2010
