--- a/generic-attributes.cabal
+++ b/generic-attributes.cabal
@@ -24,6 +24,7 @@ source-repository head
 
 library
   exposed-modules:
+      Entity
       GenericPersistence
       RecordtypeReflection
       SqlGenerator
