--- a/generic-attributes.cabal
+++ b/generic-attributes.cabal
@@ -46,7 +46,7 @@ library
     , text
     , time
     , transformers
-  default-language: Haskell2010
+  default-language: GHC2021
 
 executable generic-attributes-demo
   main-is: Main.hs
@@ -68,7 +68,7 @@ executable generic-attributes-demo
     , text
     , time
     , transformers
-  default-language: Haskell2010
+  default-language: GHC2021
 
 test-suite generic-attributes-test
   type: exitcode-stdio-1.0
@@ -95,4 +95,4 @@ test-suite generic-attributes-test
     , text
     , time
     , transformers
-  default-language: Haskell2010
+  default-language: GHC2021
