--- a/package.yaml
+++ b/package.yaml
@@ -18,6 +18,8 @@ extra-source-files:
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/githubuser/generic-attributes#readme>
 
+language: GHC2021    # See https://ghc-proposals.readthedocs.io/en/latest/proposals/0380-ghc2021.html
+
 dependencies:
 - base >= 4.7 && < 5
 - ghc
