--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-haskell@v1
+    - uses: actions/setup-haskell@v2
       with:
-        ghc-version: '9.2.5'
-        cabal-version: '3.6'
+        ghc-version: 'latest'
+        cabal-version: 'latest'
 
     - name: Cache
       uses: actions/cache@v3
