--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -11,75 +11,75 @@ on:
     - cron: '0 0 * * 0'
 
 jobs:
-  cabal:
-    name: ${{ matrix.os }} / ghc ${{ matrix.ghc }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-        cabal: ["3.6.2.0"]
-        ghc:
-          - "8.10.7"
-          - "9.0.2"
-          - "9.2.2"
-        exclude:
-          - os: macOS-latest
-            ghc: 9.0.2
-          - os: macOS-latest
-            ghc: 8.10.7
-
-          - os: windows-latest
-            ghc: 9.0.2
-          - os: windows-latest
-            ghc: 8.10.7
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - uses: haskell/actions/setup@v1.2
-      id: setup-haskell-cabal
-      name: Setup Haskell
-      with:
-        ghc-version: ${{ matrix.ghc }}
-        cabal-version: ${{ matrix.cabal }}
-
-    - name: Configure
-      run: |
-        cabal configure --enable-tests --enable-benchmarks --enable-documentation --test-show-details=direct --write-ghc-environment-files=always
-
-    - name: Freeze
-      run: |
-        cabal freeze
-
-    - uses: actions/cache@v2
-      name: Cache ~/.cabal/store
-      with:
-        path: ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
-        key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
-
-    - name: Install dependencies
-      run: |
-        cabal build all --only-dependencies
-
-    - name: Build
-      run: |
-        cabal build all
-
-    - name: Test
-      run: |
-        cabal test all
-
-    - name: Documentation
-      run: |
-        cabal haddock
+#  cabal:
+#    name: ${{ matrix.os }} / ghc ${{ matrix.ghc }}
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
+#        os: [ubuntu-latest, macOS-latest, windows-latest]
+#        cabal: ["3.6.2.0"]
+#        ghc:
+#          - "8.10.7"
+#          - "9.0.2"
+#          - "9.2.2"
+#        exclude:
+#          - os: macOS-latest
+#            ghc: 9.0.2
+#          - os: macOS-latest
+#            ghc: 8.10.7
+#
+#          - os: windows-latest
+#            ghc: 9.0.2
+#          - os: windows-latest
+#            ghc: 8.10.7
+#
+#    steps:
+#    - uses: actions/checkout@v2
+#
+#    - uses: haskell/actions/setup@v1.2
+#      id: setup-haskell-cabal
+#      name: Setup Haskell
+#      with:
+#        ghc-version: ${{ matrix.ghc }}
+#        cabal-version: ${{ matrix.cabal }}
+#
+#    - name: Configure
+#      run: |
+#        cabal configure --enable-tests --enable-benchmarks --enable-documentation --test-show-details=direct --write-ghc-environment-files=always
+#
+#    - name: Freeze
+#      run: |
+#        cabal freeze
+#
+#    - uses: actions/cache@v2
+#      name: Cache ~/.cabal/store
+#      with:
+#        path: ${{ steps.setup-haskell-cabal.outputs.cabal-store }}
+#        key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
+#
+#    - name: Install dependencies
+#      run: |
+#        cabal build all --only-dependencies
+#
+#    - name: Build
+#      run: |
+#        cabal build all
+#
+#    - name: Test
+#      run: |
+#        cabal test all
+#
+#    - name: Documentation
+#      run: |
+#        cabal haddock
 
   stack:
     name: stack / ghc ${{ matrix.ghc }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        stack: ["2.7.3"]
-        ghc: ["8.10.7"]
+        stack: ["2.9.1"]
+        ghc: ["8.10.7", "9.0.2", "9.2.2"]
 
     steps:
     - uses: actions/checkout@v2
