handling of 1-n and 1-1 references works. But no proper handling of circular references so far...

--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -54,6 +54,7 @@ executable generic-persistence-demo
   main-is: Main.hs
   other-modules:
       Embedded
+      One2Many
       Reference
       Paths_generic_persistence
   hs-source-dirs:
