--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -42,6 +42,7 @@ library
     , base >=4.7 && <5
     , bytestring
     , convertible
+    , exceptions
     , ghc
     , ghc-prim
     , rio
@@ -67,6 +68,7 @@ executable generic-persistence-demo
     , base >=4.7 && <5
     , bytestring
     , convertible
+    , exceptions
     , generic-persistence
     , ghc
     , ghc-prim
@@ -93,6 +95,7 @@ test-suite generic-persistence-test
     , base >=4.7 && <5
     , bytestring
     , convertible
+    , exceptions
     , generic-persistence
     , ghc
     , ghc-prim
