--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -83,6 +83,7 @@ test-suite generic-persistence-test
   other-modules:
       EmbeddedSpec
       GenericPersistenceSpec
+      OneToManySpec
       ReferenceSpec
       Paths_generic_persistence
   hs-source-dirs:
