--- a/stack.yaml
+++ b/stack.yaml
@@ -18,7 +18,9 @@
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
 resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/20/6.yaml
+  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/20/10.yaml
+
+pvp-bounds: both
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -37,6 +39,7 @@ packages:
 #
 extra-deps:
   - HDBC-sqlite3-2.3.3.1@sha256:5025fd94d02b9b3f0b8b8233796dd9a85a0b3dda6503c6e671e3eddbc51cb4d4,2424
+
 #  - git: https://github.com/hdbc/hdbc.git
 #    commit: ec950ff8fb3025cbcdb5ee1d3481409ea464bee5
 # - acme-missiles-0.3
