--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -5,12 +5,12 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           generic-persistence
-version:        0.2.0.0
+version:        0.2.0.1
 synopsis:       Database persistence using generics
-description:    Please see the README on GitHub at <https://github.com/githubuser/generic-persistence#readme>
+description:    Please see the README on GitHub at <https://github.com/thma/generic-persistence#readme>
 category:       Database
-homepage:       https://github.com/githubuser/generic-persistence#readme
-bug-reports:    https://github.com/githubuser/generic-persistence/issues
+homepage:       https://github.com/thma/generic-persistence#readme
+bug-reports:    https://github.com/thma/generic-persistence/issues
 author:         Thomas Mahler
 maintainer:     thma@apache.org
 copyright:      2023 Thomas Mahler
@@ -24,7 +24,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/generic-persistence
+  location: https://github.com/thma/generic-persistence
 
 library
   exposed-modules:
@@ -111,3 +111,4 @@ test-suite generic-persistence-test
     , time
     , transformers
   default-language: GHC2021
+  build-tool-depends: hspec-discover:hspec-discover == 2.*
