roll our own RIO

--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         ghc-version: ${{ matrix.ghc }}
         stack-version: ${{ matrix.stack }}
+        cabal-version: '3.6'
 
     - uses: actions/cache@v3
       name: Cache ~/.stack
