--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         stack: ["latest"]
-        ghc: ["9.0", "9.2", "9.4"]
+        ghc: ["9.2", "9.4"]
 
     steps:
     - uses: actions/checkout@v3
