Add option to support different DB backends

--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -29,6 +29,7 @@ source-repository head
 library
   exposed-modules:
       Database.GP
+      Database.GP.Conn
       Database.GP.Entity
       Database.GP.GenericPersistence
       Database.GP.SqlGenerator
