introduce safe API based on Either

--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           generic-persistence
-version:        0.3.0.2
+version:        0.3.1.0
 synopsis:       Database persistence using generics
 description:    Please see the README on GitHub at <https://github.com/thma/generic-persistence#readme>
 category:       Database
@@ -32,6 +32,7 @@ library
       Database.GP.Conn
       Database.GP.Entity
       Database.GP.GenericPersistence
+      Database.GP.GenericPersistenceSafe
       Database.GP.SqlGenerator
       Database.GP.TypeInfo
   other-modules:
