Clean up by creating a new QUery module

--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -33,6 +33,7 @@ library
       Database.GP.Entity
       Database.GP.GenericPersistence
       Database.GP.GenericPersistenceSafe
+      Database.GP.Query
       Database.GP.SqlGenerator
       Database.GP.TypeInfo
   other-modules:
