doc & connection pool

--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -46,12 +46,14 @@ library
     , base >=4.7 && <5
     , convertible
     , generic-deriving
+    , resource-pool
   default-language: GHC2021
 
 test-suite generic-persistence-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      DemoSpec
       EmbeddedSpec
       EnumSpec
       ExceptionsSpec
@@ -72,5 +74,6 @@ test-suite generic-persistence-test
     , generic-persistence
     , hspec
     , hspec-discover
+    , resource-pool
   default-language: GHC2021
   build-tool-depends: hspec-discover:hspec-discover == 2.*
