--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -60,6 +60,7 @@ test-suite generic-persistence-test
       ExceptionsSpec
       GenericPersistenceSpec
       OneToManySpec
+      OneToManySpecSafe
       QuerySpec
       ReferenceSpec
       Paths_generic_persistence
