--- a/package.yaml
+++ b/package.yaml
@@ -51,6 +51,7 @@ tests:
     - hspec-discover
     - QuickCheck
     - HDBC-sqlite3 #>= 2.3.3.1
+    - HDBC-postgresql #>= 2.5.0.1
     verbatim:
       build-tool-depends:
         hspec-discover:hspec-discover == 2.*
