--- a/stack.yaml
+++ b/stack.yaml
@@ -39,6 +39,7 @@ packages:
 #
 extra-deps:
   - HDBC-sqlite3-2.3.3.1   # not in lts-20.17
+  - HDBC-postgresql-2.5.0.1 # not in lts-20.17
   - resource-pool-0.4.0.0  # 0.4 is not in lts-20.17
 
 # - acme-missiles-0.3
