--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -61,6 +61,7 @@ test-suite generic-persistence-test
       GenericPersistenceSpec
       OneToManySafeSpec
       OneToManySpec
+      PostgresQuerySpec
       PostgresSpec
       QuerySpec
       ReferenceSpec
