--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -14,30 +14,6 @@ on:
 
 jobs:
 
-  # # Label of the runner job
-  # runner-job:
-  #   # You must use a Linux environment when using service containers or container jobs
-  #   runs-on: ubuntu-latest
-
-  #   # Service containers to run with `runner-job`
-  #   services:
-  #     # Label used to access the service container
-  #     postgres:
-  #       # Docker Hub image
-  #       image: postgres
-  #       # Provide the password for postgres
-  #       env:
-  #         POSTGRES_PASSWORD: admin
-  #       # Set health checks to wait until postgres has started
-  #       options: >-
-  #         --health-cmd pg_isready
-  #         --health-interval 10s
-  #         --health-timeout 5s
-  #         --health-retries 5
-  #       ports:
-  #         # Maps tcp port 5432 on service container to the host
-  #         - 5432:5432
-
   stack:
     name: stack / ghc ${{ matrix.ghc }}
     runs-on: ubuntu-latest
@@ -64,7 +40,7 @@ jobs:
     strategy:
       matrix:
         stack: ["latest"]
-        ghc: ["9.2", "9.4", "9.6"]
+        ghc: ["9.2", "9.4", "9.6", "9.8"]
 
     steps:
     - uses: actions/checkout@v3
