--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -6,9 +6,9 @@ on:
     types: [synchronize, opened, reopened]
   push:
     branches: [main]
-  schedule:
+  #schedule:
     # additionally run once per week (At 00:00 on Sunday) to maintain cache
-    - cron: '0 0 * * 0'
+    # - cron: '0 0 * * 0'
 
 
 
