--- a/package.yaml
+++ b/package.yaml
@@ -14,7 +14,7 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/thma/generic-persistence#readme>
 
 language: GHC2021    # See https://ghc-proposals.readthedocs.io/en/latest/proposals/0380-ghc2021.html
-tested-with: GHC==9.2.5, GHC==9.4.4
+tested-with: GHC==9.2, GHC==9.4, GHC==9.6, GHC==9.8
 
 default-extensions:
 - DuplicateRecordFields
