--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -5,7 +5,7 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           generic-persistence
-version:        0.7.0.0
+version:        0.7.0.1
 synopsis:       Database persistence using generics
 description:    Please see the README on GitHub at <https://github.com/thma/generic-persistence#readme>
 category:       Database
@@ -18,7 +18,7 @@ license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
 tested-with:
-    GHC==9.2, GHC==9.4, GHC==9.6, GHC==9.8
+    GHC==9.2, GHC==9.4, GHC==9.6, GHC==9.8, GHC==9.10, GHC==9.12
 extra-source-files:
     README.md
 
