--- a/package.yaml
+++ b/package.yaml
@@ -63,6 +63,7 @@ tests:
     - QuickCheck
     - HDBC-sqlite3 #>= 2.3.3.1
     - HDBC-postgresql #>= 2.5.0.1
+    - text
     verbatim:
       build-tool-depends:
         hspec-discover:hspec-discover == 2.*
