dependency on pk field name

--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -48,6 +48,7 @@ library
       TemplateHaskell
       QuasiQuotes
       LambdaCase
+      DataKinds
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       HDBC
@@ -87,6 +88,7 @@ test-suite generic-persistence-test
       TemplateHaskell
       QuasiQuotes
       LambdaCase
+      DataKinds
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HDBC
