--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -77,6 +77,7 @@ test-suite generic-persistence-test
       QuerySpec
       ReferenceSpec
       SelfReferenceSpec
+      SpecHook
       Paths_generic_persistence
   hs-source-dirs:
       test
@@ -101,6 +102,7 @@ test-suite generic-persistence-test
     , generic-persistence
     , hspec
     , hspec-discover
+    , hspec-junit-formatter
     , raw-strings-qq
     , resource-pool
     , template-haskell
