added recovery tests and got rid of partial functions in tests.

--- a/generic-persistence.cabal
+++ b/generic-persistence.cabal
@@ -68,6 +68,7 @@ test-suite generic-persistence-test
       DemoSpec
       EmbeddedSpec
       EnumSpec
+      ErrorRecoverySpec
       ExceptionsSpec
       GenericPersistenceSpec
       OneToManySafeSpec
